# yourssh

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  review_diff_tmp.txt
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: platform-build-check.yml  pr-test.yml  release.yml  wiki-sync.yml
app/: README.md  pubspec.yaml
app/assets/: monaco_editor.html
app/integration_test/: feature_screenshots_test.dart  rdp_screenshots_test.dart
app/lib/: main.dart
app/test/: settings_provider_test.dart  supabase_service_test.dart  sync_provider_supabase_test.dart
app/tool/: jump_probe.dart
app/windows/: CMakeLists.txt
core/: Cargo.toml  build.rs
core/src/: error.rs  keys.rs  lib.rs  sftp.rs  shell.rs  ssh.rs  tunnel.rs  vault.rs  yourssh.udl
docs/: PLAN.md  SYNC_SETUP.md  plugin-authoring-guide.md  roadmap.md
docs/wiki/: Developer-Guide-Architecture.md  Developer-Guide-Build.md  Developer-Guide-Contributing.md  Developer-Guide-Plugin-Authoring.md  Developer-Guide-Plugin-System.md  Home.md  User-Guide-AI-Chat.md  User-Guide-Audit-Log.md  User-Guide-Bulk-Actions.md  User-Guide-DevOps-Plugin.md  User-Guide-Getting-Started.md  User-Guide-Port-Forwarding.md  User-Guide-Recording.md  User-Guide-SFTP.md  User-Guide-SSH-Connections.md  User-Guide-Settings.md  User-Guide-Sync.md  User-Guide-Terminal.md  (+1 more)
macos/: project.yml
scripts/: build-core.sh
tests/: test_invariant_update_service.dart
(+580 files in other folders)
