[package]
name = "yourssh-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "yourssh_core"

[dependencies]
russh = "0.44"
russh-keys = "0.44"
russh-sftp = "2.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
uniffi = { version = "0.28", features = ["tokio", "cli"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
